--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <body>
         <header class="blank">
+            <div class ="toolbar">
             <nav class="fixed">
                 <span>Home</span>
                 <span>The Masks</span>
@@ -17,10 +18,11 @@
                 <Span>Contact Us</Span>
             </nav>
             <div class='login'>
-                <span>Search</span>
+                <span>🔎</span>
                 <span>Login</span>
-                <span>Cart</span>
+                <span>🛒</span>
             </div>
+        </div>
         </header>
         
         <section class="colorful">
